# src/openapi-spec/openapi.yaml
@@ -32,8 +32,6 @@ tags:
     description: HRA-API v1 Routes
   - name: ds-graph
     description: Dataset Graph Routes
-  - name: hra-kg
-    description: HRA KG Routes
   - name: hra-pop
     description: HRApop Routes
 
@@ -121,12 +119,6 @@ paths:
   /hra-pop/supported-tools:
     $ref: hra-pop/paths/supported-tools.yaml
 
-  /kg/asctb-term-occurences:
-    $ref: hra-kg/paths/asctb-term-occurences.yaml
-  /kg/digital-objects:
-    $ref: hra-kg/paths/digital-objects.yaml
-  /kg/do-search:
-    $ref: hra-kg/paths/do-search.yaml
 
 components:
   schemas:
